--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,7 +3,11 @@
 <ul id = "articles">
   <% @articles.each do |article| %>
     <li>
-      <%= article.title %>
+      <%= link_to article.title, article_path(article),
+      class: "article-title", id: "article_#{article.id}" %>
     </li>
   <% end %>
 </ul>
+
+<%= link_to "Create a new article", new_article_path,
+class: "new_article" %>
